// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init generator should run successfully 1`] = `
Array [
  "src",
  "tsconfig.app.json",
  "tsconfig.json",
  ".eslintrc.json",
  "jest.config.js",
  "tsconfig.spec.json",
]
`;

exports[`init generator should run successfully 2`] = `
Array [
  "app",
  "assets",
  "environments",
  "main.ts",
  "index.ts",
]
`;

exports[`init generator should run successfully 3`] = `
Array [
  ".gitkeep",
  "app.controller.spec.ts",
  "app.controller.ts",
  "app.module.ts",
  "app.service.spec.ts",
  "app.service.ts",
]
`;

exports[`init generator should run successfully 4`] = `
Object {
  "projects": Object {
    "api": Object {
      "name": "test-api",
      "type": "nest",
    },
    "mobile": Object {
      "name": "mobile",
      "type": "ionic-angular",
    },
    "web": Object {
      "name": "web",
      "type": "angular",
    },
  },
}
`;

exports[`init generator: custom options should run successfully 1`] = `
Array [
  "src",
  "tsconfig.app.json",
  "tsconfig.json",
  ".eslintrc.json",
  "jest.config.js",
  "tsconfig.spec.json",
]
`;

exports[`init generator: custom options should run successfully 2`] = `
Array [
  "app",
  "assets",
  "environments",
  "main.ts",
  "index.ts",
]
`;

exports[`init generator: custom options should run successfully 3`] = `
Array [
  ".gitkeep",
  "app.controller.spec.ts",
  "app.controller.ts",
  "app.module.ts",
  "app.service.spec.ts",
  "app.service.ts",
]
`;

exports[`init generator: custom options should run successfully 4`] = `
Object {
  "projects": Object {
    "api": Object {
      "name": "server",
      "type": "nest",
    },
    "mobile": Object {
      "name": "native",
      "type": "ionic-angular",
    },
    "web": Object {
      "name": "frontend",
      "type": "angular",
    },
  },
}
`;
